# voltines

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/voltines/: __init__.py  app.py  cli.py  data.py  player.py
src/voltines/templates/: app.html
