[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voltines"
version = "0.2.1"
description = "The official Python client for dangerously high-voltage covers."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "The Voltines"}
]
keywords = ["music", "band", "cli", "promo", "covers-band"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Artistic Software",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://voltines.com"
Music = "https://voltines.com/music.html"
Gigs = "https://voltines.com/gigs.html"
Contact = "https://voltines.com/contact.html"
YouTube = "https://www.youtube.com/playlist?list=PLw5R-srekOnHNYEg2qVXjqzlteNRqiKa8"

[project.scripts]
voltines = "voltines.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voltines = ["templates/*.html"]
